package tictactoe;

public enum GameCondition {
    IN_PROGRESS,
    ENDED
}
